@@ -4,7 +4,8 @@
 [+] Feature "Mot de passe oublié" : envoi d'un lien par mail permettant la création d'un nouveau mot de passe (P3ter)
 [+] Feature "Mot de passe oublié" : l'adresse e-mail devient obligatoire à l'installation de PluXml et à la création d'un utilisateur (P3ter)
 [+] Amélioration des performances du gestionnaire de médias (bazooka07)
-[+] Thème par défaut : ajout du titre et du sous-titre sur mobile (P3ter) 
+[+] Thème par défaut : ajout du titre et du sous-titre sur mobile (P3ter)
+[+] Ajout de la fonction plxUtils::printInputRadio permettant d'afficher des boutons radio (P3ter) 
 [+] #40 Ne pas afficher le meta du site en mode article, static, categorie (Stéphane)
 [+] #135 Contextualiser le lien du flux RSS dans le <head> en fonction du mode catégorie, tag, ou autre (bazooka07, P3ter)
 [+] #207 Afficher/masquer le chapeau et les tags d'un article dans l'administration en CSS3 au lieu d'utiliser du JS (bazooka07, Stéphane, P3ter)
